- Configurable autosave interval.


2023.03.18
- Fix: You couldn't right click the key color to pick another color in color selector.
- Fix: When the same color appears more than once in the color selector, right
  clicking any of it caused all of them to appear as color picking target.
- Fix: When right clicked on drawarea to cancel color picking, ToggleControls
  also occured.

2023.03.17
- Color sliders moved just above the palette block in PaletteEditor.
- Fixed mouse wheel events.

2023.03.16
- MediaManager is reduced to GFXManager to remove the dependency on BASS.DLL.
  Should switch Bass to SDL2 but that's out of this project's scope.
- BuildRelease.bat added. It builds release executables (both x86 and x64) and data file
  into ..\_release.
- SDL2 dll names are changed to allow both dlls to be in the same folder.
  Source modified to pick the correct dll.

2023.03.15
- Sliders are visible again.
- BUG: Sliders don't receive MouseWheel event.
- Added and wired Alpha slider.
- Changed target architecture to x64.
- Changed SDL2 libraries to SDL2-for-Pascal (more up to date).

2023.03.14
- Color selector visible and works again.
- Still working under the hood.

2023.03.11
- Big rework under the hood regarding mouse events and visual components,
  so a few things are broken now:
  - Color selector is not visible.
  - Sliders are not visible. (If somehow you can invoke palette editor.)

2023.03.10
- SubMenu items insert a message into queue when clicked.
- Clicking on CEL/Load invokes the windows standard open file dialog. Browsing an
  original AAT CEL file and click open will load the file into CELImage.
  It doesn't yet color fits the loaded CEL.
- MSG_MOUSECOORDS messages are removed. They caused queue overflow because when
  a file dialog was open, but the mouse moved over drawarea, SDL accumulated the
  events and fired all at once when the dialog was closed. Coordinates are read
  from DrawArea and passed to Controls in main loop instead.