@@ -30,7 +30,7 @@ Tool1=BOX
 Tool2=LINE
 Tool3=CIRCLE
 Tool4=SEP.
-Tool5=FILLTO
+Tool5=FILL
 ActiveTool=1
 Ink0=OPAQUE
 Ink1=OPAQUE
@@ -57,5 +57,5 @@ Selected4=4
 Selected5=5
 Selected6=105
 Selected7=7
-ActiveColor=0
+ActiveColor=106
 
